Initialize admin user when start application